# SecureChat

./: .gitignore  CMakeLists.txt  README.md
Client/: README.md  client.cpp  client_header.h
Client/Docs/: readme.txt
Common/: Chat.cpp  Chat.h  Message.cpp  Message.h  Payload.cpp  Payload.h  utility.h
Managers/: CMakeLists.txt  README.md  managers.cpp  managers.h
Server/: README.md  server.cpp
Server/Classes/: Session.cpp  Session.h  User.cpp  User.h
Server/Docs/: users.txt
